# RUSTcrud

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  store.rs
src/app/: mod.rs
src/app/db/: mod.rs
src/app/handlers/: mod.rs  routes.rs
src/common/: config.rs
src/db/: mod.rs
src/handlers/: mod.rs  routes.rs
tests/: integration_tests.rs
